// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`views/ExperienceList renders empty list 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  />
</div>
`;

exports[`views/ExperienceList renders experineces list 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  >
    <li>
      <p>
        Javascript
      </p>
    </li>
    <li>
      <p>
        Java
      </p>
    </li>
  </ul>
</div>
`;

exports[`views/ExperienceList renders experineces list with button 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  >
    <li>
      <button>
        Javascript
      </button>
    </li>
    <li>
      <button>
        Java
      </button>
    </li>
  </ul>
</div>
`;
